# personal-finance-for-newbies

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data/in/: demo.xlsx  pac.xlsx  template.xlsx
jupyters/: near_real_time_pf.ipynb  rf_rate.ipynb  utils.py
personal-finance-for-newbies/: pyproject.toml
personal-finance-for-newbies/jupyters/: utils.py
scripts/: run-web-app.ps1
src/: 0_🏠_Home.py  aggregation.py  input_output.py  plot.py  returns.py  risk.py  sector.py  utils.py  var.py
src/.streamlit/: config.toml
src/pages/: 1_🎯_Asset_Allocation_&_PnL.py  1_📈_Basic.py  1_📈_Basic_Stats.py  2_👩‍🔬_Advanced_Stats.py  2_👩‍🔬_Risk_and_Return.py  2_📈_Return_Analysis.py  3_⚠️_Risk_Analysis.py
