[tool.poetry]
name = "personal-finance-for-newbies"
version = "0.1.0"
description = ""
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
yfinance = "^0.2.20"
plotly = "^5.15.0"
jupyter = "^1.0.0"
ipykernel = "^6.23.2"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
pyportfolioopt = ">=1.1.0"
streamlit = "^1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
