[tool.poetry]
name = "personal-finance-for-newbies"
version = "0.1.2"
description = ""
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
yfinance = "0.2.48"
plotly = "^5.15.0"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
streamlit = "1.39.0"
black = "^23.3.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
